results/SVCOMP/houdini/log-StringCompare03-2024_03_19_05_03_37.txt
public class StringCompare03 {
  //@ non_null
  //@ non_null
  //@ ensures \result;
  //@ ensures !\result;
  //@ ensures s3 == null ==> \result;
  //@ ensures s3 == null ==> !\result;
  //@ ensures s3 != null ==> \result;
  //@ ensures s3 != null ==> !\result;
  //@ ensures s4 == null ==> \result;
  //@ ensures s4 == null ==> !\result;
  //@ ensures s4 != null ==> \result;
  //@ ensures s4 != null ==> !\result;
  public static boolean f(String s3, String s4) {
    // test regionMatches (ignore case)
    return !s3.regionMatches(true, 0, s4, 0, 5);
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    f("#$%^&*123", "#$%^&*123");
    f("#$%^#*123", "#$%^#*123");
    f("fsgdhj", "fsgdhj");
    f("fsgdhj", "fsadhj");
    f("DiffBlue L1mitted", "DiffBlue L1mitted");
    f("DiffBlue Limitted", "DiffBlue L1mitted");
    f("HiiffblTe Limited", "");
  }
}


/home/max/Documents/JMLGPT/tmp/StringCompare03.java:2: error: No modifiers are allowed prior to a lightweight specification case
  //@ non_null
      ^
1 error

public class StringCompare03 {
  //@ non_null
  //@ ensures \result;
  //@ ensures !\result;
  //@ ensures s3 == null ==> \result;
  //@ ensures s3 == null ==> !\result;
  //@ ensures s3 != null ==> \result;
  //@ ensures s3 != null ==> !\result;
  //@ ensures s4 == null ==> \result;
  //@ ensures s4 == null ==> !\result;
  //@ ensures s4 != null ==> \result;
  //@ ensures s4 != null ==> !\result;
  public static boolean f(String s3, String s4) {
    // test regionMatches (ignore case)
    return !s3.regionMatches(true, 0, s4, 0, 5);
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    f("#$%^&*123", "#$%^&*123");
    f("#$%^#*123", "#$%^#*123");
    f("fsgdhj", "fsgdhj");
    f("fsgdhj", "fsadhj");
    f("DiffBlue L1mitted", "DiffBlue L1mitted");
    f("DiffBlue Limitted", "DiffBlue L1mitted");
    f("HiiffblTe Limited", "");
  }
}


/home/max/Documents/JMLGPT/tmp/StringCompare03.java:2: error: No modifiers are allowed prior to a lightweight specification case
  //@ non_null
      ^
1 error

public class StringCompare03 {
  //@ ensures \result;
  //@ ensures !\result;
  //@ ensures s3 == null ==> \result;
  //@ ensures s3 == null ==> !\result;
  //@ ensures s3 != null ==> \result;
  //@ ensures s3 != null ==> !\result;
  //@ ensures s4 == null ==> \result;
  //@ ensures s4 == null ==> !\result;
  //@ ensures s4 != null ==> \result;
  //@ ensures s4 != null ==> !\result;
  public static boolean f(String s3, String s4) {
    // test regionMatches (ignore case)
    return !s3.regionMatches(true, 0, s4, 0, 5);
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    f("#$%^&*123", "#$%^&*123");
    f("#$%^#*123", "#$%^#*123");
    f("fsgdhj", "fsgdhj");
    f("fsgdhj", "fsadhj");
    f("DiffBlue L1mitted", "DiffBlue L1mitted");
    f("DiffBlue Limitted", "DiffBlue L1mitted");
    f("HiiffblTe Limited", "");
  }
}


OpenJML not responding. Aborted.
